--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,29 @@
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v2
-
-    - name: List the directory structure for debugging
-      run: find . -type f
+    - name: Check out repository code
+      uses: actions/checkout@v4
 
     - name: Set up JDK 21
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: '21'
         distribution: 'temurin'
+        java-version: '21'
+        cache: 'maven'
 
-
-
+    - name: Verify POM.xml exists
+      run: ls -la Java  \
 
     - name: Build with Maven
-      run: mvn clean
       working-directory: Flashcard
+      run: mvn install -B  
 
     - name: Run tests with Maven
-      run: mvn test
       working-directory: Flashcard
+      run: mvn test  
