--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,25 @@
 name: Java CI with Maven
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
+        java-version: '17'
         distribution: 'temurin'
-        java-version: '21'
-        cache: 'maven'
-
-    - name: Verify POM.xml exists
-      run: ls -la Flashcard  \
 
     - name: Build with Maven
-      working-directory: Flashcard
-      run: mvn install -B  
-
-    - name: Run tests with Maven
-      working-directory: Flashcard
-      run: mvn test  
+      run: mvn -B verify site
